// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled basic render 1`] = `
.css-16m5m6t {
  color: blue;
  font-size: 20px;
}

<h1
  className="css-16m5m6t"
>
  hello world
</h1>
`;

exports[`styled basic render with object as style 1`] = `
.css-kp2uw9 {
  font-size: 20px;
}

<h1
  className="css-kp2uw9"
>
  hello world
</h1>
`;

exports[`styled call expression 1`] = `
.css-1vj1sv9 {
  font-size: 20px;
}

<h1
  className="legacy__class  css-1vj1sv9"
>
  hello world
</h1>
`;

exports[`styled component as selector 1`] = `
.css-1vj1sv9 {
  font-size: 20px;
}

.css-sgyhpk {
  display: -webkit-box,-moz-box,-ms-flexbox,-webkit-flex,flex;
}

<div
  className="css-sgyhpk"
>
  hello 
  <h1
    className="css-1vj1sv9"
  >
    This will be green
  </h1>
   world
</div>
`;

exports[`styled composes 1`] = `
.css-z9nuho {
  font-size: 20px;
  color: blue;
}

<h1
  className="legacy__class     css-z9nuho"
  scale={2}
>
  hello world
</h1>
`;

exports[`styled composes based on props 1`] = `
.css-bithoy {
  color: blue;
}

<h1
  a={true}
  className="css-bithoy"
>
  hello world
</h1>
`;

exports[`styled composes based on props 2`] = `
.css-45352 {
  color: green;
}

<h1
  className="css-45352"
>
  hello world
</h1>
`;

exports[`styled composes with objects 1`] = `
.css-3f34ux {
  font-size: 3.157334518321em;
  color: #333;
  height: 64px;
}

@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
    only screen and (min--moz-device-pixel-ratio: 1.5),
    only screen and (-o-min-device-pixel-ratio: 1.5/1),
    only screen and (min-resolution: 144dpi),
    only screen and (min-resolution: 1.5dppx) {
  .css-3f34ux {
    font-size: 1.4323121856191332em;
  }
}

<h1
  className="legacy__class     css-3f34ux"
  scale={2}
>
  hello world
</h1>
`;

exports[`styled composition 1`] = `
.css-1vj1sv9 {
  font-size: 20px;
}

<h1
  className="legacy__class    css-1vj1sv9"
>
  hello world
</h1>
`;

exports[`styled function in expression 1`] = `
.css-1vj1sv9 {
  font-size: 20px;
}

<h1
  className="legacy__class    css-1vj1sv9"
  scale={2}
>
  hello world
</h1>
`;

exports[`styled higher order component 1`] = `
.css-dlwa03 {
  name: onyx;
  background-color: '#343a40';
  flex-direction: column;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  font-size: 20px;
}

<div
  className="css-dlwa03"
/>
`;

exports[`styled innerRef 1`] = `
.css-f8g05s {
  font-size: 12px;
}

<h1
  className="css-f8g05s"
>
  hello world
</h1>
`;

exports[`styled name 1`] = `
.css-1i0qtj6 {
  name: FancyH1;
  font-size: 20px;
}

<h1
  className="css-1i0qtj6"
>
  hello world
</h1>
`;

exports[`styled no dynamic 1`] = `
.css-f8g05s {
  font-size: 12px;
}

<h1
  className="css-f8g05s"
>
  hello world
</h1>
`;

exports[`styled object composition 1`] = `
.css-ifc29m {
  border-radius: 50%;
  -webkit-transition: -webkit-transform 400ms ease-in-out;
  transition: -webkit-transform 400ms ease-in-out,transform 400ms ease-in-out,transform 400ms ease-in-out, -webkit-transform 400ms ease-in-out;
  border: 3px solid currentColor;
  width: 96px;
  height: 96px;
  color: blue;
}

.css-ifc29m:hover {
  -webkit-transform: scale(1.2);
  transform: scale(1.2);
}

<img
  className="css-ifc29m"
/>
`;

exports[`styled objects 1`] = `
.css-1j0hret {
  padding: 10px;
  display: flex;
}

<h1
  className="some-class   css-1j0hret"
  display="flex"
>
  hello world
</h1>
`;

exports[`styled themes 1`] = `
.css-5q2sb2 {
  font-size: 20px;
  color: #8c81d8;
  height: 64px;
  background-color: #ffd43b;
}

<span
  className="css-5q2sb2"
  scale={2}
>
  hello world
</span>
`;

exports[`styled throws if undefined is passed as the component 1`] = `
"You are trying to create a styled element with an undefined component.
You may have forgotten to import it."
`;
